<?xml version="1.0" ?>
<package>
  <name>asr_halcon_bridge</name>
  <version>1.0.0</version>
  <description>This package is used to convert between image-messages of the ROS environment and HALCON-images.</description>
  <author>Allgeyer Tobias</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/asr_halcon_bridge</url>
  
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
</package>


