<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asr_halcon_bridge</name>
  <version>1.0.0</version>
  <description>This package is used to convert between image-messages of the ROS environment and HALCON-images.</description>
  <author>Allgeyer Tobias</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/asr_halcon_bridge</url>
  <buildtool_depend>ament_cmake</buildtool_depend>  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
